product/gradle-plugin/src/test/python/static_proxy/data/errors/starargs.py
from java import *


args = (1, 2)

class D(static_proxy(*args)):
    pass
